# PythonBol-Translator

./: .gitignore  MANIFEST.in  NEXT_SESSION.md  README.md  SUPPORTED_SUBSET.md  pyproject.toml  run.bat  run.command  run.sh
.github/workflows/: publish.yml
config/: protected.json.example
samples/: BANKACCT.cob  customer-report.cob  hello.cob  payroll-calc.cob
src/cobol_safe_translator/: __init__.py  __main__.py  adapters.py  analyzer.py  arithmetic_translators.py  batch.py  block_translator.py  cfg.py  cics_translator.py  cli.py  cli_test_runner.py  condition_translator.py  dli_translator.py  ebcdic.py  evaluate_translator.py  exec_block_handler.py  exporters.py  file_translators.py  function_translators.py  incremental.py  indexed_file_adapter.py  io_translators.py  line_preprocessor.py  mapper.py  mapper_codegen.py  mapper_verbs.py  mcp_server.py  middleware_stubs.py  models.py  parser.py  pic_parser.py  preprocessor.py  procedure_parser.py  project_analyzer.py  prompt_generator.py  report_parser.py  report_translators.py  screen_codegen.py  screen_parser.py  sort_translators.py  (+7 more)
tests/: conftest.py  test_adapters.py  test_analyzer.py  test_batch.py  test_behavioral.py  test_block_translator.py  test_cics_translator.py  test_cli.py  test_completeness.py  test_condition_translator.py  test_copy_integration.py  test_exporters.py  test_incremental.py  test_mapper.py  test_mapper_arithmetic.py  test_mapper_blocks.py  test_mapper_conditions.py  test_mapper_verbs.py  test_mcp_server.py  test_nested_programs.py  test_new_features.py  test_parser.py  test_phase1_phase4.py  test_preprocessor.py  test_project_analyzer.py  test_prompt_generator.py  test_report_writer.py  test_screen_section.py  test_sort_translators.py  test_sql_translator.py  test_test_generator.py  test_validation.py
tools/: extract_gnucobol_tests.py
