[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobol-safe-translator"
version = "0.3.0"
description = "Offline COBOL-to-Python translator that generates Python skeletons and analysis reports"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
cobol2py = "cobol_safe_translator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cobol_safe_translator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
