[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobol-safe-translator"
version = "0.6.1"
description = "Translate COBOL to Python. Zero dependencies, 100% valid output on 4,705 files. MCP server for AI coding assistants."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = []
authors = [
    { name = "IronAdamant", email = "18153828+IronAdamant@users.noreply.github.com" },
]
keywords = [
    "cobol", "cobol-to-python", "cobol-migration", "cobol-parser", "cobol-translator",
    "python", "translator", "migration", "mainframe", "mainframe-modernization",
    "legacy-code", "legacy-migration", "modernization", "code-generation",
    "ibm", "ibm-mainframe", "enterprise-cobol", "cobol85",
    "db2", "cics", "vsam", "jcl",
    "mcp-server", "llm", "ai-migration", "ai-tools",
    "zero-dependencies", "offline", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Pre-processors",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/IronAdamant/PythonBol-Translator"
Repository = "https://github.com/IronAdamant/PythonBol-Translator"
Issues = "https://github.com/IronAdamant/PythonBol-Translator/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
cobol2py = "cobol_safe_translator.cli:main"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.mcp.json",
    "/out1",
    "/out2",
    "/tests",
    "/wiki-local",
    "/LLM_Development.md",
    "/COMPLETE_PROJECT_DOCUMENTATION.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cobol_safe_translator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
